force-app/main/default/objects/System__c/fields/Code_Location__c.field-meta.xml
<CustomField>
    <fullName>Code_Location__c</fullName>
    <description
  >The URL or otherwise accessible location of the editable code. (ex. github URL)</description>
    <label>Code Location</label>
    <type>TextArea</type>
</CustomField>