force-app/main/default/objects/System__c/fields/Full_Description__c.field-meta.xml
<CustomField>
    <fullName>Full_Description__c</fullName>
    <description
  >A detailed description of what a system does functionally. Please provide only (what) a system does and not (how) a system works.</description>
    <label>Full Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>