force-app/main/default/objects/System__c/fields/Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy__c</fullName>
    <description>The heirarchical canonical name of the system</description>
    <formula>IF(
  NOT(
    ISBLANK( Parent_System__r.Parent_System__r.Parent_System__r.Name )
  ), 
  Parent_System__r.Parent_System__r.Parent_System__r.Name &amp; &apos; - &apos;,
  &apos;&apos;
) &amp; IF(
  NOT(
    ISBLANK( Parent_System__r.Parent_System__r.Name )
  ), 
  Parent_System__r.Parent_System__r.Name &amp; &apos; - &apos;,
  &apos;&apos;
) &amp; IF(
  NOT(
    ISBLANK( Parent_System__r.Name )
  ), 
  Parent_System__r.Name &amp; &apos; - &apos;,
  &apos;&apos;
) &amp; Name</formula>
    <label>Hierarchy</label>
    <type>Text</type>
</CustomField>