force-app/main/default/objects/System__c/fields/How_to_Access__c.field-meta.xml
<CustomField>
    <fullName>How_to_Access__c</fullName>
    <description
  >URL of each UI provided by the system. If more than one, please correlate to users. (Ex. editors - someurl.com, visitors - someotherurl.com)</description>
    <label>How to Access</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>