force-app/main/default/objects/System__c/fields/Integrations__c.field-meta.xml
<CustomField>
    <fullName>Integrations__c</fullName>
    <description>All external systems this system integrates with.</description>
    <inlineHelpText
  >All external systems this system integrates with.</inlineHelpText>
    <label>Integrations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Act-On</fullName>
            </value>
            <value>
                <fullName>Clickability</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Apple News</fullName>
            </value>
            <value>
                <fullName>Alexa Skill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>