force-app/main/default/objects/System__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <description
  >A concise definition of what success is for this system that justifies its existence.</description>
    <inlineHelpText
  >A concise definition of what success is for this system that justifies its existence.</inlineHelpText>
    <label>Justification</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>