force-app/main/default/objects/System__c/fields/Parent_System__c.field-meta.xml
<CustomField>
    <fullName>Parent_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related parent system this system belongs to.</description>
    <label>Parent System</label>
    <referenceTo>System__c</referenceTo>
    <relationshipLabel>Sub-Systems</relationshipLabel>
    <relationshipName>Systems</relationshipName>
    <type>Lookup</type>
</CustomField>