force-app/main/default/objects/System__c/fields/Server_Location__c.field-meta.xml
<CustomField>
    <fullName>Server_Location__c</fullName>
    <description
  >A description of the server/executing system(s) (ex. lambda function, ec2 instance, etc.)</description>
    <label>Server Location</label>
    <type>TextArea</type>
</CustomField>