force-app/main/default/objects/System__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description
  >Provide an abbreviated description of the functionality the system provides/supports.</description>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>