force-app/main/default/objects/System__c/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <formula>Hierarchy__c &amp; &quot; &quot; &amp;
HYPERLINK(&quot;/&quot; &amp;  Id,
  &quot;view&quot;,
  &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Name</label>
    <type>Text</type>
</CustomField>