force-app/main/default/objects/System__c/fields/Technologies__c.field-meta.xml
<CustomField>
    <fullName>Technologies__c</fullName>
    <description>All technologies that are used by the system</description>
    <label>Technologies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angular1</fullName>
            </value>
            <value>
                <fullName>Angular2+</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Codeigniter</fullName>
            </value>
            <value>
                <fullName>Docker</fullName>
            </value>
            <value>
                <fullName>Elasticsearch</fullName>
            </value>
            <value>
                <fullName>Handlebars</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>jQuery</fullName>
            </value>
            <value>
                <fullName>Laravel</fullName>
            </value>
            <value>
                <fullName>Memcached</fullName>
            </value>
            <value>
                <fullName>MySQL/Aurura</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>Redis</fullName>
            </value>
            <value>
                <fullName>Redshift</fullName>
            </value>
            <value>
                <fullName>Velocity</fullName>
            </value>
            <value>
                <fullName>VueJS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>