force-app/main/default/objects/System__c/fields/Usage_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Usage_Frequency__c</fullName>
    <description
  >A description of the pattern of use, if it covers multiple use cases, please describe how often each case uses the system. (ex. visitors - daily, editors - weekly etc.)</description>
    <label>Usage Frequency</label>
    <type>TextArea</type>
</CustomField>