force-app/main/default/objects/System__c/fields/Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Use_Cases__c</fullName>
    <description
  >A description of how users/audiences interact with a system. Please supply detailed user stories where available.</description>
    <label>Use Cases</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>