force-app/main/default/objects/System__c/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <description
  >The users or audience of the system. Can be a business vertical, can be an audience (eg. Govtech website visitors) or can be specific user names/emails.</description>
    <label>Users</label>
    <type>TextArea</type>
</CustomField>