force-app/main/default/objects/System__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>System_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>