force-app/main/default/objects/System__c/listViews/Systems.listView-meta.xml
<ListView>
    <fullName>Systems</fullName>
    <columns>System_Name__c</columns>
    <columns>Short_Description__c</columns>
    <columns>How_to_Access__c</columns>
    <columns>Justification__c</columns>
    <filterScope>Everything</filterScope>
    <label>Systems</label>
</ListView>